// Produced by Acceleo Cpp Generator 1.1.0-R7S1-20151214

import "ccsds_mal/types.proto";
import "groundAlarm/Transition.proto";

package groundAlarm.protobuf;

message GroundMonitoringAlarm {
extensions 8 to 108;

  optional ccsds_mal.protobuf.TIME creationDate = 1;
  optional ccsds_mal.protobuf.TIME updateDate = 2;
  optional ccsds_mal.protobuf.TIME closingDate = 3;
  optional ccsds_mal.protobuf.BOOLEAN hasAckRequest = 4;
  optional ccsds_mal.protobuf.LONG alarmId = 5;
  repeated groundAlarm.protobuf.Transition transitions = 6;
  optional ccsds_mal.protobuf.BOOLEAN isNominal = 7;
}
